[gd_scene load_steps=52 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes/BDSMMachineAltFuck.gd" type="Script" id=4]
[ext_resource path="res://Player/Props/BDSMMachine.tscn" type="PackedScene" id=6]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=71]
animation = "BDSMMachineAltDoubleFuckFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=72]
animation = "BDSMMachineAltDoubleFuckInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "BDSMMachineAltDoubleFuck_1-loop"

[sub_resource type="AnimationNodeAnimation" id=74]
animation = "BDSMMachineAltFuckFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=75]
animation = "BDSMMachineAltFuckIdle_1-loop"

[sub_resource type="AnimationNodeAnimation" id=76]
animation = "BDSMMachineAltFuckInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=77]
animation = "BDSMMachineAltFuck_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=78]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=79]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=80]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=81]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=86]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=87]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=89]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=90]
states/BDSMMachineAltDoubleFuckFast_1-loop/node = SubResource( 71 )
states/BDSMMachineAltDoubleFuckFast_1-loop/position = Vector2( 607, 363 )
states/BDSMMachineAltDoubleFuckInside_1-loop/node = SubResource( 72 )
states/BDSMMachineAltDoubleFuckInside_1-loop/position = Vector2( 607, 188 )
states/BDSMMachineAltDoubleFuck_1-loop/node = SubResource( 73 )
states/BDSMMachineAltDoubleFuck_1-loop/position = Vector2( 594, 271 )
states/BDSMMachineAltFuckFast_1-loop/node = SubResource( 74 )
states/BDSMMachineAltFuckFast_1-loop/position = Vector2( 201, 363 )
states/BDSMMachineAltFuckIdle_1-loop/node = SubResource( 75 )
states/BDSMMachineAltFuckIdle_1-loop/position = Vector2( 405, 73 )
states/BDSMMachineAltFuckInside_1-loop/node = SubResource( 76 )
states/BDSMMachineAltFuckInside_1-loop/position = Vector2( 190, 188 )
states/BDSMMachineAltFuck_1-loop/node = SubResource( 77 )
states/BDSMMachineAltFuck_1-loop/position = Vector2( 190, 271 )
transitions = [ "BDSMMachineAltFuckIdle_1-loop", "BDSMMachineAltFuckInside_1-loop", SubResource( 78 ), "BDSMMachineAltFuckInside_1-loop", "BDSMMachineAltFuckIdle_1-loop", SubResource( 79 ), "BDSMMachineAltFuckIdle_1-loop", "BDSMMachineAltDoubleFuckInside_1-loop", SubResource( 80 ), "BDSMMachineAltDoubleFuckInside_1-loop", "BDSMMachineAltFuckIdle_1-loop", SubResource( 81 ), "BDSMMachineAltDoubleFuckInside_1-loop", "BDSMMachineAltDoubleFuck_1-loop", SubResource( 82 ), "BDSMMachineAltDoubleFuck_1-loop", "BDSMMachineAltDoubleFuckInside_1-loop", SubResource( 83 ), "BDSMMachineAltDoubleFuck_1-loop", "BDSMMachineAltDoubleFuckFast_1-loop", SubResource( 84 ), "BDSMMachineAltDoubleFuckFast_1-loop", "BDSMMachineAltDoubleFuck_1-loop", SubResource( 85 ), "BDSMMachineAltFuckInside_1-loop", "BDSMMachineAltFuck_1-loop", SubResource( 86 ), "BDSMMachineAltFuck_1-loop", "BDSMMachineAltFuckInside_1-loop", SubResource( 87 ), "BDSMMachineAltFuck_1-loop", "BDSMMachineAltFuckFast_1-loop", SubResource( 88 ), "BDSMMachineAltFuckFast_1-loop", "BDSMMachineAltFuck_1-loop", SubResource( 89 ) ]
start_node = "BDSMMachineAltFuckIdle_1-loop"
graph_offset = Vector2( -180, 133 )

[sub_resource type="AnimationNodeBlendTree" id=91]
graph_offset = Vector2( -135.96, 80.12 )
nodes/Animation/node = SubResource( 3 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 4 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 90 )
nodes/StateMachine/position = Vector2( 147.04, 134.12 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="AnimationNodeAnimation" id=93]
animation = "BDSMMachineAltDoubleFuckFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=94]
animation = "BDSMMachineAltDoubleFuckInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=95]
animation = "BDSMMachineAltDoubleFuck_2-loop"

[sub_resource type="AnimationNodeAnimation" id=96]
animation = "BDSMMachineAltFuckFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=97]
animation = "BDSMMachineAltFuckIdle_2-loop"

[sub_resource type="AnimationNodeAnimation" id=98]
animation = "BDSMMachineAltFuckInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=99]
animation = "BDSMMachineAltFuck_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=100]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=101]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=102]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=103]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=104]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=105]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=106]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=107]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=108]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=109]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=110]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=111]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=112]
states/BDSMMachineAltDoubleFuckFast_2-loop/node = SubResource( 93 )
states/BDSMMachineAltDoubleFuckFast_2-loop/position = Vector2( 705, 358 )
states/BDSMMachineAltDoubleFuckInside_2-loop/node = SubResource( 94 )
states/BDSMMachineAltDoubleFuckInside_2-loop/position = Vector2( 705, 173 )
states/BDSMMachineAltDoubleFuck_2-loop/node = SubResource( 95 )
states/BDSMMachineAltDoubleFuck_2-loop/position = Vector2( 705, 259 )
states/BDSMMachineAltFuckFast_2-loop/node = SubResource( 96 )
states/BDSMMachineAltFuckFast_2-loop/position = Vector2( 319, 365 )
states/BDSMMachineAltFuckIdle_2-loop/node = SubResource( 97 )
states/BDSMMachineAltFuckIdle_2-loop/position = Vector2( 508, 55 )
states/BDSMMachineAltFuckInside_2-loop/node = SubResource( 98 )
states/BDSMMachineAltFuckInside_2-loop/position = Vector2( 319, 173 )
states/BDSMMachineAltFuck_2-loop/node = SubResource( 99 )
states/BDSMMachineAltFuck_2-loop/position = Vector2( 319, 266 )
transitions = [ "BDSMMachineAltFuckIdle_2-loop", "BDSMMachineAltFuckInside_2-loop", SubResource( 100 ), "BDSMMachineAltFuckInside_2-loop", "BDSMMachineAltFuckIdle_2-loop", SubResource( 101 ), "BDSMMachineAltFuckIdle_2-loop", "BDSMMachineAltDoubleFuckInside_2-loop", SubResource( 102 ), "BDSMMachineAltDoubleFuckInside_2-loop", "BDSMMachineAltFuckIdle_2-loop", SubResource( 103 ), "BDSMMachineAltDoubleFuckInside_2-loop", "BDSMMachineAltDoubleFuck_2-loop", SubResource( 104 ), "BDSMMachineAltDoubleFuck_2-loop", "BDSMMachineAltDoubleFuckInside_2-loop", SubResource( 105 ), "BDSMMachineAltDoubleFuck_2-loop", "BDSMMachineAltDoubleFuckFast_2-loop", SubResource( 106 ), "BDSMMachineAltDoubleFuckFast_2-loop", "BDSMMachineAltDoubleFuck_2-loop", SubResource( 107 ), "BDSMMachineAltFuckInside_2-loop", "BDSMMachineAltFuck_2-loop", SubResource( 108 ), "BDSMMachineAltFuck_2-loop", "BDSMMachineAltFuckInside_2-loop", SubResource( 109 ), "BDSMMachineAltFuck_2-loop", "BDSMMachineAltFuckFast_2-loop", SubResource( 110 ), "BDSMMachineAltFuckFast_2-loop", "BDSMMachineAltFuck_2-loop", SubResource( 111 ) ]
start_node = "BDSMMachineAltFuckIdle_2-loop"
graph_offset = Vector2( -32, 1 )

[sub_resource type="AnimationNodeBlendTree" id=92]
graph_offset = Vector2( -42.2919, 68.0042 )
nodes/StateMachine/node = SubResource( 112 )
nodes/StateMachine/position = Vector2( 334.708, 188.004 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "output", 0, "StateMachine" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[node name="BDSMMachineAltFuck" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19477, 0, 0 )
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.196641, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]

[node name="BDSMMachine" parent="." index="2" instance=ExtResource( 6 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource( 91 )
anim_player = NodePath("../Doll3D/DollSkeleton/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 22 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 92 )
anim_player = NodePath("../BDSMMachine/AnimationPlayer")
parameters/StateMachine/playback = SubResource( 23 )

[node name="MilkIntake" type="Position3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.65569, 3.86752, 0.0936075 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="BDSMMachine"]
